<resources>
    <string name="app_name">Orda Payment</string>
    <string name="ota_app_name">Orda</string>
    <string name="institution_name">Orda</string>
    <string name="activation_instructions" />
    <string name="institution_website">https://orda.africa</string>
    <string name="home">Home</string>
    <string name="customerText">Kindly instruct the customer to dial the code below</string>
    <string name="ussd_token_withdrawal">USSD Token Withdrawal</string>
    <string name="title_activity_login">Login</string>
    <string name="register_customer">Open Account</string>
    <string name="check_accounts">View Accounts</string>
    <string name="title_activity_open_account">Register Customer</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Log out</string>
    <string name="activateAccount">Activate Account</string>
    <string name="confirmOTP">Confirm OTP</string>
    <string name="verifyAccount">Verify Account</string>
    <string name="agentSetup">Agent Setup</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="lastName">Last name</string>
    <string name="surname">Surname</string>
    <string name="surname_hint">Enter surname&#8230;</string>
    <string name="firstName">First Name</string>
    <string name="first_name_hint">Enter first name&#8230;</string>
    <string name="phoneNo">Phone Number</string>
    <string name="confirmPhoneNumber">Confirm Phone Number</string>
    <string name="phoneNumber_hint">Enter phone number&#8230;</string>
    <string name="phone_number_required">The customer\'s phone number is required for this transaction.</string>
    <string name="cvv_instruction">Please enter the 3 or 4-digit number at the back of your card.</string>
    <string name="bank_required">Please select the bank that issued the ATM card.</string>
    <string name="confirmPhoneNumber_hint">Enter phone number again</string>
    <string name="dateOfBirth">Date of Birth</string>
    <string name="syncAccountReport">Sync Account Report</string>
    <string name="reports">Reports</string>
    <string name="misc">Miscellaneous</string>
    <string name="placeOfBirth">Place of Birth</string>
    <string name="placeOfBirth_hint">Enter place of birth</string>
    <string name="address">Address</string>
    <string name="address_hint">Enter address&#8230;</string>
    <string name="contactDetails">Contact Details</string>
    <string name="photo">Photo</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="otherDetails">Other Details</string>
    <string name="cardSerialNumber">Card Serial Number</string>
    <string name="serialNumber">Serial Number</string>
    <string name="serialNumberHint">Enter card serial number (optional)&#8230;</string>
    <string name="cardSerialNumber_hint">Enter card serial number</string>
    <string name="confirmSerialNumber">Confirm Serial Number</string>
    <string name="confirmSerialNumber_hint">Enter serial number again</string>
    <string name="nextofkinName">Next of kin Name</string>
    <string name="nextOfKinName_hint">Enter next of kin name</string>
    <string name="nextofkinPhoneNo">Next of kin Phone</string>
    <string name="nextOfKinPhone_hint">Enter next of kin phone number</string>
    <string name="next">Next</string>
    <string name="calendar_instruction">Click to select date</string>
    <string name="setDate">Set Date</string>
    <string name="createAccount">Create Account</string>
    <string name="agentPIN">Agent\'s PIN</string>
    <string name="referralname">Referral Name</string>
    <string name="referralnumber">Referral\'s phone number</string>
    <string name="nationalidentityno">National identity number</string>
    <string name="officersCode">Account officer\'s code</string>
    <string name="agentPIN_hint">Enter agent\'s PIN</string>
    <string name="referalname_hint">Enter your referral\'s name</string>
    <string name="referralnumber_hint">Enter your referral\'s phone number</string>
    <string name="nationalIdentity_hint">Enter your Identity number</string>
    <string name="agentCode_hint">Enter your code</string>
    <string name="updateBVN">Update BVN</string>
    <string name="update">Update</string>
    <string name="bvnUpdate">bvn Update</string>
    <string name="failedBvnUpdate">Failed BVN Update</string>
    <string name="bvnUpdateReport">BVN Update Report</string>
    <string name="loanRequestReport">Loan Request Report</string>
    <string name="submit">Submit</string>
    <string name="accountNumber">Account Number</string>
    <string name="accountDetails">Account Details</string>
    <string name="customerBVNDetails">Customer bvn Details</string>
    <string name="loanRequestDetails">Loan Request Details</string>
    <string name="accountNumberHint">Enter account number</string>
    <string name="sn">S/N</string>
    <string name="customersPIN">Customer\'s PIN</string>
    <string name="customersPINHint">Enter customer\'s PIN</string>
    <string name="confirmPIN">Confirm PIN</string>
    <string name="confirmPINHint">Enter PIN again</string>
    <string name="customersBVN">Customer\'s BVN</string>
    <string name="customersBVNHint">Enter customer\'s BVN &#8230;</string>
    <string name="enterAccountNumber">Enter account number</string>
    <string name="customerPhone">Customer\'s Phone Number</string>
    <string name="customerPlaceHolder">No customer details captured</string>
    <string name="customerInstitution">Customer\'s Institution</string>
    <string name="marketAssociation">Market Association</string>
    <string name="memberID">Member ID</string>
    <string name="loanProduct">Loan Product</string>
    <string name="product">Product</string>
    <string name="transactionAmount">Amount</string>
    <string name="submitRequest">Submit Request</string>
    <string name="gender">Gender</string>
    <string name="religion">Religion</string>
    <string name="state">State</string>
    <string name="enterBVN">Enter BVN</string>
    <string name="bvn">BVN</string>
    <string name="registerQuestion">Register?</string>
    <string name="validateCustomer">Validate Customers</string>
    <string name="validate_account">Validate Account</string>
    <string-array name="Networks">
        <item>Select Network Operator</item>
        <item>MTN</item>
        <item>Airtel</item>
        <item>Etisalat</item>
        <item>Glo</item>
        <item>Visafone</item>

    </string-array>
    <string-array name="Gender">
        <item>Gender…</item>
        <item>Female</item>
        <item>Male</item>
    </string-array>
    <string-array name="Religions">
        <item>Select your religion </item>
        <item>ISLAM</item>
        <item>CHRISTIANITY</item>
        <item>OTHERS</item>
    </string-array>
    <string-array name="States">
        <item>LG,LAGOS,Ikeja</item>
        <item>FC,FCT,Abuja</item>
        <item>GM,GOMBE,Gombe</item>
        <item>IM,IMO,Owerri</item>
        <item>JG,JIGAWA,Dutse</item>
        <item>KB,KEBBI,Birnin Kebbi</item>
        <item>KD,KADUNA,Kaduna</item>
        <item>KG,KOGI,Lokoja</item>
        <item>KN,KANO,Kano</item>
        <item>KT,KATSINA,Katsina</item>
        <item>KW,KWARA,Ilorin</item>
        <item>NI,NIGER,Minna</item>
        <item>NS,NASSARAWA,Lafia</item>
        <item>OG,OGUN,Abeokuta</item>
        <item>ON,ONDO,Akure</item>
        <item>OS,OSUN,Osogbo</item>
        <item>OY,OYO,Ibadan</item>
        <item>PL,PLATEAU,Jos</item>
        <item>RV,RIVERS,Port Harcourt</item>
        <item>SK,SOKOTO,Sokoto</item>
        <item>TR,TARABA,Jalingo</item>
        <item>YB,YOBE,Damaturu</item>
        <item>ZM,ZAMFARA,Gusau</item>
    </string-array>
    <string-array name="lgas"></string-array>
    <string name="title_activity_loan_request">Loan Request</string>
    <string name="loan_request">Loan Request</string>
    <string name="loan_requests">Loan Requests</string>
    <string name="failed_loan_requests">Failed Loan Requests</string>
    <string name="reloadCustomers">Reload Customers</string>
    <string name="reloadAssociation">Reload Association</string>
    <string name="login">Login</string>
    <string name="syncAccounts">Synchronized Accounts</string>
    <string name="failedSyncAccount">Failed Sync. Accounts</string>
    <string name="beginSync">Synchronize Data</string>
    <string name="prompt_phone">Phone</string>
    <string name="promptPIN">PIN</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This phone number is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."
    </string>
    <string name="close">Close</string>
    <string name="agent_activation">Agent Activation</string>
    <string name="verification_code">Verification Code</string>
    <string name="institution_code">Institution Code</string>
    <string name="select_your_institution">Select your institution</string>
    <string name="agentCode">Agent\'s Code</string>
    <string name="agent_code">AGENT CODE</string>
    <string name="placeholder">*614*</string>
    <string name="code">Code</string>
    <string name="enter_verification_code">Enter verification code&#8230;</string>
    <string name="enter_activation_code">Enter activation code&#8230;</string>
    <string name="codeHint">Enter code</string>
    <string name="enterPIN">Enter PIN</string>
    <string name="newAgentQuestion">Are you a new agent?</string>
    <string name="activationVerificationCode">Activation/Verification Code</string>
    <string name="DATA_SOURCE">Credit_Club_Offline_Data_Source</string>
    <string name="title_activity_bvnUpdate">BVN Update</string>
    <string name="status">Status</string>
    <string name="amount">Amount</string>
    <string name="cash_deposit">Cash Deposit</string>
    <string name="cash_withdraw">Cash Withdraw</string>
    <string name="deposit_Amount">Deposit Amount</string>
    <string name="depositAmount_hint">Enter amount</string>
    <string name="amount_hint">Please enter transactionAmount&#8230;</string>
    <string name="customer_PIN_hint">Enter customer\'s PIN&#8230;</string>
    <string name="customerPIN">Customer\'s PIN</string>
    <string name="withdraw">Withdraw</string>
    <string name="withdrawal_amount">Withdrawal Amount</string>
    <string name="token">Token</string>
    <string name="token_hint">Enter the token you received</string>
    <string name="sign_in">Sign In (Existing User)</string>
    <string name="sign_in_menu">Sign In</string>
    <string name="networkoperator">Network Operator</string>
    <string name="enter_amount">Enter Amount&#8230;</string>
    <string name="EnterAgentPin">Enter Agent Pin</string>
    <string name="middle_name">Middle Name</string>
    <string name="card_pan">Card PAN</string>
    <string name="account_number">Account Number</string>
    <string name="account_number_hint">Enter account number&#8230;</string>
    <string name="hotlist_reason">Reason for hotlisting</string>
    <string name="hotlist_reason_hint">Why do you want to hot-list the card?</string>
    <string name="online_functions">Online Functions</string>
    <string name="enter_amount_to_withdraw">Enter amount to withdraw&#8230;</string>
    <string name="customer_token">Customer Token</string>
    <string name="enter_the_token_you_received">Enter the token you received</string>
    <string name="commission">Commission</string>
    <string name="support">Support</string>
    <string name="hla_tagging">HLA Tagging</string>
    <string name="title_activity_faq">FAQs</string>
</resources>