<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:activity="com.appzonegroup.app.fasttrack.OpenAccountActivity">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/online_functions"
            android:visible="false"
            android:icon="@drawable/ic_fa_arrow_up"
            android:title="@string/online_functions" />
        <item
            android:id="@+id/reports"
            android:icon="@drawable/ic_agent_balance"
            android:title="@string/reports" />
        <item
            android:id="@+id/commissions"
            android:icon="@drawable/ic_agent_balance"
            android:title="@string/commission" />
        <item
            android:id="@+id/support"
            android:icon="@drawable/ic_chat_bubble_outline"
            android:title="@string/support" />
        <item
            android:id="@+id/fn_hla_tagging"
            android:icon="@drawable/ic_maps_and_flags"
            android:title="@string/hla_tagging" />
        <item
            android:id="@+id/fn_faq"
            android:icon="@drawable/ic_help"
            android:title="@string/title_activity_faq" />
        <item
            android:id="@+id/logout"
            android:visible="false"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>
</menu>

