<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="@dimen/activity_horizontal_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/networkoperator"
            android:layout_marginTop="15dp"/>

        <Spinner
            android:id="@+id/airtime_networkOperator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/Networks"
            android:layout_marginBottom="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phoneNo"/>

        <EditText
            android:id="@+id/airtime_phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phoneNumber_hint"
            android:inputType="phone"
            android:maxLength="11"
            android:layout_marginBottom="10dp"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transactionAmount"/>

        <EditText
            android:id="@+id/airtime_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_amount"
            android:inputType="textPersonName"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agentPIN"/>

        <EditText
            android:id="@+id/airtime_agentPin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/EnterAgentPin"
            android:inputType="textPersonName"
            android:layout_marginBottom="50dp"/>



        <Button
            android:id="@+id/basicinfo_next_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            style="@style/button_style"
            android:onClick="getAirtime"/>

    </LinearLayout>

</ScrollView>