<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/fifteen_dp"
    tools:activity="com.appzonegroup.app.fasttrack.WithdrawalByTokenActivity">

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <com.appzonegroup.app.fasttrack.ui.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_your_institution"/>

        <Spinner
            android:id="@+id/institutions_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/select_your_institution"/>


        <com.appzonegroup.app.fasttrack.ui.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phoneNo"/>

        <com.appzonegroup.app.fasttrack.ui.EditText
            android:id="@+id/phone_no_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/phoneNumber_hint"/>

        <com.appzonegroup.app.fasttrack.ui.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transactionAmount"/>

        <com.appzonegroup.app.fasttrack.ui.EditText
            android:id="@+id/amount_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/withdrawal_amount"/>

        <com.appzonegroup.app.fasttrack.ui.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/token"/>

        <com.appzonegroup.app.fasttrack.ui.EditText
            android:id="@+id/token_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/token_hint"
            android:layout_marginBottom="@dimen/ten_dp"/>

        <Button
            android:id="@+id/submit_btn"
            android:text="@string/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>



</ScrollView>
