<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="@dimen/activity_horizontal_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <com.appzonegroup.app.fasttrack.ui.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lastName"/>

        <com.appzonegroup.app.fasttrack.ui.EditText
            android:id="@+id/basicinfo_surname_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/surname_hint"
            android:inputType="textPersonName"
            android:layout_marginBottom="10dp"/>

        <com.appzonegroup.app.fasttrack.ui.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstName"/>

        <com.appzonegroup.app.fasttrack.ui.EditText
            android:id="@+id/basicinfo_firstname_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name_hint"
            android:inputType="textPersonName"
            android:layout_marginBottom="10dp"/>


        <com.appzonegroup.app.fasttrack.ui.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/middle_name"/>

        <com.appzonegroup.app.fasttrack.ui.EditText
            android:id="@+id/basicinfo_middlename_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter middle name"
            android:inputType="textPersonName"
            android:layout_marginBottom="10dp"/>

        <com.appzonegroup.app.fasttrack.ui.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"/>

        <Spinner
            android:id="@+id/generalinfo_gender_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/Gender"
            android:layout_marginBottom="10dp" />

        <com.appzonegroup.app.fasttrack.ui.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phoneNo"/>

        <com.appzonegroup.app.fasttrack.ui.EditText
            android:id="@+id/generalinfo_phone_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phoneNumber_hint"
            android:inputType="phone"
            android:maxLength="11"
            android:layout_marginBottom="10dp"/>

        <com.appzonegroup.app.fasttrack.ui.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/religion"/>

        <Spinner
            android:id="@+id/generalinfo_religion_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/Religions"
            android:layout_marginBottom="10dp" />

        <com.appzonegroup.app.fasttrack.ui.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dateOfBirth"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/white"
            android:layout_marginBottom="@dimen/fifteen_dp"
            android:onClick="show_calendar">

            <com.appzonegroup.app.fasttrack.ui.TextView
                android:id="@+id/generalinfo_dob_tv"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:gravity="center"
                android:text="@string/calendar_instruction"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@android:drawable/ic_menu_my_calendar"/>

        </RelativeLayout>

        <Button
            android:id="@+id/basicinfo_next_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            style="@style/button_style"
            android:onClick="next_button_click1"/>

    </LinearLayout>

</ScrollView>