<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.appzonegroup.app.fasttrack.WithdrawalByAPITokenActivity$OtherInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.appzonegroup.app.fasttrack.ui.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/withdrawal_amount" />

        <com.appzonegroup.app.fasttrack.ui.EditText
            android:id="@+id/amount_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/enter_amount_to_withdraw"
            android:inputType="numberDecimal" />

        <com.appzonegroup.app.fasttrack.ui.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer_token" />

        <com.appzonegroup.app.fasttrack.ui.EditText
            android:id="@+id/customer_token_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/enter_the_token_you_received"
            android:inputType="numberPassword"
            android:maxLength="10" />

        <com.appzonegroup.app.fasttrack.ui.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customerPIN"
            android:visibility="gone" />

        <com.appzonegroup.app.fasttrack.ui.EditText
            android:id="@+id/customer_pin_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/customer_PIN_hint"
            android:inputType="numberPassword"
            android:maxLength="10"
            android:visibility="gone" />

        <Button
            android:id="@+id/send_token_btn"
            style="@style/button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="withdraw_clicked"
            android:text="@string/withdraw" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>