<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:activity=".CardHotlistActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/app_name">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/twenty_dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_pan"/>

        <EditText
            android:id="@+id/card_pan_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/card_pan"
            android:inputType="number"
            android:layout_marginBottom="@dimen/ten_dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_number"/>

        <EditText
            android:id="@+id/account_number_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account_number_hint"
            android:inputType="number"
            android:layout_marginBottom="@dimen/ten_dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hotlist_reason"/>

        <EditText
            android:id="@+id/hotlist_reason_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hotlist_reason_hint"
            android:inputType="text"
            android:layout_marginBottom="@dimen/ten_dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/token"/>

        <EditText
            android:id="@+id/token_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/token_hint"
            android:inputType="text"
            android:layout_marginBottom="@dimen/twenty_five_dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            style="@style/button_style"
            android:onClick="hotlist_card_click"/>

    </LinearLayout>

    <!--<android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />-->

</LinearLayout>
