<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/signin_instructionTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:layout_marginBottom="20dp"
            android:text="@string/sign_in_menu"/>



        <TextView
            android:id="@+id/signin_phoneNumberTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phoneNo"/>

        <EditText
            android:id="@+id/signin_agentActivation_phoneNumberEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phoneNumber_hint"
            android:inputType="phone"
            android:layout_marginBottom="@dimen/fifteen_dp"/>

        <TextView
            android:id="@+id/signin_pinTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agentPIN"/>


        <EditText
            android:id="@+id/signin_agentActivation_PINEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterPIN"
            android:inputType="numberPassword"
            android:layout_marginBottom="@dimen/fifteen_dp"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            style="@style/button_style"
            android:onClick="signin"/>



        </LinearLayout>

</LinearLayout>