<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:activity="com.appzonegroup.app.fasttrack.BOILoanRequestActivity">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customerPhone"/>

    <EditText
        android:id="@+id/loanRequest_customerPhone_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/customerPhone"
        android:inputType="phone"
        android:layout_marginBottom="@dimen/fifteen_dp"/>

    <Button
        android:id="@+id/basicinfo_next_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/validateCustomer"
        style="@style/button_style"
        android:layout_marginBottom="@dimen/fifteen_dp"
        android:onClick="next_button_click"/>

    <EditText
        android:id="@+id/loanRequest_customerName_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/customerPlaceHolder"
        android:enabled="false"
        android:layout_marginBottom="@dimen/fifteen_dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customerInstitution"/>

    <Spinner
        android:id="@+id/loanRequest_institutions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fifteen_dp">
    </Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marketAssociation"/>

    <Spinner
        android:id="@+id/loanRequest_marketAssociations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fifteen_dp">
    </Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/memberID"/>

    <EditText
        android:id="@+id/loanRequest_memberID_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/memberID"
        android:inputType="phone"
        android:layout_marginBottom="@dimen/fifteen_dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        style="@style/button_style"
        android:onClick="next_button_click"/>

</LinearLayout>
